--- a/cf/i18n/resources/es-es.untranslated.json
+++ b/cf/i18n/resources/es-es.untranslated.json
@@ -16,6 +16,10 @@
     "translation": " does not exist as an available plugin repo."
   },
   {
+    "id": "**EXPERIMENTAL** Create a V3 App",
+    "translation": ""
+  },
+  {
     "id": "ALIAS:",
     "translation": "ALIAS:"
   },
@@ -57,6 +61,10 @@
   },
   {
     "id": "App is not staged.",
+    "translation": ""
+  },
+  {
+    "id": "App {{.AppName}} already exists.",
     "translation": ""
   },
   {
@@ -1120,6 +1128,10 @@
     "translation": "CF_NAME update-user-provided-service my-route-service -r https://example.com"
   },
   {
+    "id": "CF_NAME v3-create-app --name [name]",
+    "translation": ""
+  },
+  {
     "id": "CF_NAME v3apps",
     "translation": "CF_NAME v3apps"
   },
@@ -1169,6 +1181,10 @@
   },
   {
     "id": "Create an isolation segment",
+    "translation": ""
+  },
+  {
+    "id": "Creating V3 app {{.AppName}} in org {{.CurrentOrg}} / space {{.CurrentSpace}} as {{.CurrentUser}}...",
     "translation": ""
   },
   {
@@ -1713,6 +1729,10 @@
   },
   {
     "id": "The command to execute",
+    "translation": ""
+  },
+  {
+    "id": "The desired application name",
     "translation": ""
   },
   {
