--- a/cf/i18n/resources/it-it.untranslated.json
+++ b/cf/i18n/resources/it-it.untranslated.json
@@ -12,6 +12,10 @@
     "translation": " does not exist as an available plugin repo."
   },
   {
+    "id": "**EXPERIMENTAL** Create a V3 App",
+    "translation": ""
+  },
+  {
     "id": "ALIAS:",
     "translation": "ALIAS:"
   },
@@ -33,6 +37,10 @@
   },
   {
     "id": "App is not staged.",
+    "translation": ""
+  },
+  {
+    "id": "App {{.AppName}} already exists.",
     "translation": ""
   },
   {
@@ -708,6 +716,10 @@
     "translation": "CF_NAME update-user-provided-service my-route-service -r https://example.com"
   },
   {
+    "id": "CF_NAME v3-create-app --name [name]",
+    "translation": ""
+  },
+  {
     "id": "CF_NAME v3apps",
     "translation": "CF_NAME v3apps"
   },
@@ -749,6 +761,10 @@
   },
   {
     "id": "Create an isolation segment",
+    "translation": ""
+  },
+  {
+    "id": "Creating V3 app {{.AppName}} in org {{.CurrentOrg}} / space {{.CurrentSpace}} as {{.CurrentUser}}...",
     "translation": ""
   },
   {
@@ -1249,6 +1265,10 @@
   },
   {
     "id": "The command to execute",
+    "translation": ""
+  },
+  {
+    "id": "The desired application name",
     "translation": ""
   },
   {
