improved the error message when deleting a username that is not unique
- also updated the translation files for a previous commit

[finishes #141975181]

--- a/cf/i18n/resources/de-de.untranslated.json
+++ b/cf/i18n/resources/de-de.untranslated.json
@@ -52,10 +52,6 @@
     "translation": "App "
   },
   {
-    "id": "App is not staged.",
-    "translation": ""
-  },
-  {
     "id": "App {{.AppName}} already exists.",
     "translation": ""
   },
@@ -1228,8 +1224,8 @@
     "translation": ""
   },
   {
-    "id": "Error deleting user {{.Username}} \nMultiple users with that username returned. Please use 'cf curl' with specific origin instead.",
-    "translation": "Error deleting user {{.Username}} \nMultiple users with that username returned. Please use 'cf curl' with specific origin instead."
+    "id": "Error deleting user {{.Username}} \nMultiple users with that username found. Please use 'cf curl' to delete the user by guid instead.",
+    "translation": "Error deleting user {{.Username}} \nMultiple users with that username found. Please use 'cf curl' to delete the user by guid instead."
   },
   {
     "id": "Error parsing response",
@@ -1246,10 +1242,6 @@
   {
     "id": "Error removing plugin binary: ",
     "translation": "Error removing plugin binary: "
-  },
-  {
-    "id": "Error running task: {{.CloudControllerMessage}}",
-    "translation": ""
   },
   {
     "id": "Error staging application: {{.Message}}",
@@ -1330,10 +1322,6 @@
   {
     "id": "Invalid flag: ",
     "translation": "Invalid flag: "
-  },
-  {
-    "id": "Isolation segment '{{.Name}}' not found.",
-    "translation": ""
   },
   {
     "id": "Isolation segment {{.IsolationSegmentName}} already exists.",
@@ -1669,14 +1657,6 @@
   },
   {
     "id": "Task has been submitted successfully for execution.",
-    "translation": ""
-  },
-  {
-    "id": "Task must have a droplet. Specify droplet or assign current droplet to app.",
-    "translation": "Task must have a droplet. Specify droplet or assign current droplet to app."
-  },
-  {
-    "id": "Task workers are unavailable.",
     "translation": ""
   },
   {
@@ -2257,10 +2237,6 @@
   },
   {
     "id": "{{.MemorySize}} x {{.NumInstances}} instances",
-    "translation": ""
-  },
-  {
-    "id": "{{.Message}}\nNote that this command requires CF API version 3.0.0+.",
     "translation": ""
   }
 ]
