--- a/cf/i18n/resources/es-es.untranslated.json
+++ b/cf/i18n/resources/es-es.untranslated.json
@@ -60,10 +60,6 @@
     "translation": "App "
   },
   {
-    "id": "App is not staged.",
-    "translation": ""
-  },
-  {
     "id": "App {{.AppName}} already exists.",
     "translation": ""
   },
@@ -1264,8 +1260,8 @@
     "translation": ""
   },
   {
-    "id": "Error deleting user {{.Username}} \nMultiple users with that username returned. Please use 'cf curl' with specific origin instead.",
-    "translation": "Error deleting user {{.Username}} \nMultiple users with that username returned. Please use 'cf curl' with specific origin instead."
+    "id": "Error deleting user {{.Username}} \nMultiple users with that username found. Please use 'cf curl' to delete the user by guid instead.",
+    "translation": "Error deleting user {{.Username}} \nMultiple users with that username found. Please use 'cf curl' to delete the user by guid instead."
   },
   {
     "id": "Error parsing response",
@@ -1282,10 +1278,6 @@
   {
     "id": "Error removing plugin binary: ",
     "translation": "Error removing plugin binary: "
-  },
-  {
-    "id": "Error running task: {{.CloudControllerMessage}}",
-    "translation": ""
   },
   {
     "id": "Error staging application: {{.Message}}",
@@ -1374,10 +1366,6 @@
   {
     "id": "Invalid flag: ",
     "translation": "Invalid flag: "
-  },
-  {
-    "id": "Isolation segment '{{.Name}}' not found.",
-    "translation": ""
   },
   {
     "id": "Isolation segment {{.IsolationSegmentName}} already exists.",
@@ -1673,14 +1661,6 @@
   },
   {
     "id": "Task has been submitted successfully for execution.",
-    "translation": ""
-  },
-  {
-    "id": "Task must have a droplet. Specify droplet or assign current droplet to app.",
-    "translation": "Task must have a droplet. Specify droplet or assign current droplet to app."
-  },
-  {
-    "id": "Task workers are unavailable.",
     "translation": ""
   },
   {
@@ -2289,10 +2269,6 @@
   },
   {
     "id": "{{.MemorySize}} x {{.NumInstances}} instances",
-    "translation": ""
-  },
-  {
-    "id": "{{.Message}}\nNote that this command requires CF API version 3.0.0+.",
     "translation": ""
   }
 ]
