--- a/cf/i18n/resources/ko-kr.all.json
+++ b/cf/i18n/resources/ko-kr.all.json
@@ -320,10 +320,6 @@
     "translation": "앱 인스턴스 한계"
   },
   {
-    "id": "App is not staged.",
-    "translation": ""
-  },
-  {
     "id": "App name is a required field",
     "translation": "앱 이름은 필수 필드임"
   },
@@ -2504,7 +2500,7 @@
     "translation": "{{.DomainName}} 도메인 삭제 중에 오류 발생\n{{.Err}}"
   },
   {
-    "id": "Error deleting user {{.Username}} \nMultiple users with that username returned. Please use 'cf curl' with specific origin instead.",
+    "id": "Error deleting user {{.Username}} \nMultiple users with that username found. Please use 'cf curl' to delete the user by guid instead.",
     "translation": ""
   },
   {
@@ -2702,10 +2698,6 @@
   {
     "id": "Error retrieving stacks: {{.Error}}",
     "translation": "스택을 검색하는 중에 오류 발생: {{.Error}}"
-  },
-  {
-    "id": "Error running task: {{.CloudControllerMessage}}",
-    "translation": ""
   },
   {
     "id": "Error saving manifest: {{.Error}}",
@@ -3582,10 +3574,6 @@
   {
     "id": "Invite and manage users, select and change plans, and set spending limits\n",
     "translation": "사용자 초대 및 관리, 플랜 선택 및 변경, 지출 한계 설정\n"
-  },
-  {
-    "id": "Isolation segment '{{.Name}}' not found.",
-    "translation": ""
   },
   {
     "id": "Isolation segment {{.IsolationSegmentName}} already exists.",
@@ -5288,14 +5276,6 @@
     "translation": ""
   },
   {
-    "id": "Task must have a droplet. Specify droplet or assign current droplet to app.",
-    "translation": ""
-  },
-  {
-    "id": "Task workers are unavailable.",
-    "translation": ""
-  },
-  {
     "id": "Terminate a running task of an app",
     "translation": ""
   },
@@ -6917,10 +6897,6 @@
   },
   {
     "id": "{{.MemorySize}} x {{.NumInstances}} instances",
-    "translation": ""
-  },
-  {
-    "id": "{{.Message}}\nNote that this command requires CF API version 3.0.0+.",
     "translation": ""
   },
   {
