--- a/cf/i18n/resources/ja-jp.all.json
+++ b/cf/i18n/resources/ja-jp.all.json
@@ -320,6 +320,10 @@
     "translation": "アプリのインスタンス制限"
   },
   {
+    "id": "App is not staged.",
+    "translation": ""
+  },
+  {
     "id": "App name is a required field",
     "translation": "アプリ名は必須フィールドです"
   },
@@ -2700,6 +2704,10 @@
     "translation": "スタックの取得時にエラーが発生しました: {{.Error}}"
   },
   {
+    "id": "Error running task: {{.CloudControllerMessage}}",
+    "translation": ""
+  },
+  {
     "id": "Error saving manifest: {{.Error}}",
     "translation": "マニフェストの保存中にエラーが発生しました: {{.Error}}"
   },
@@ -3574,6 +3582,10 @@
   {
     "id": "Invite and manage users, select and change plans, and set spending limits\n",
     "translation": "ユーザーの招待と管理、プランの選択と変更、および支払上限の設定を行います\n"
+  },
+  {
+    "id": "Isolation segment '{{.Name}}' not found.",
+    "translation": ""
   },
   {
     "id": "Isolation segment {{.IsolationSegmentName}} already exists.",
@@ -5276,6 +5288,14 @@
     "translation": ""
   },
   {
+    "id": "Task must have a droplet. Specify droplet or assign current droplet to app.",
+    "translation": ""
+  },
+  {
+    "id": "Task workers are unavailable.",
+    "translation": ""
+  },
+  {
     "id": "Terminate a running task of an app",
     "translation": ""
   },
@@ -6897,6 +6917,10 @@
   },
   {
     "id": "{{.MemorySize}} x {{.NumInstances}} instances",
+    "translation": ""
+  },
+  {
+    "id": "{{.Message}}\nNote that this command requires CF API version 3.0.0+.",
     "translation": ""
   },
   {
