--- a/cf/i18n/resources/zh-hant.all.json
+++ b/cf/i18n/resources/zh-hant.all.json
@@ -320,6 +320,10 @@
     "translation": "應用程式實例限制"
   },
   {
+    "id": "App is not staged.",
+    "translation": ""
+  },
+  {
     "id": "App name is a required field",
     "translation": "應用程式名稱是必要欄位"
   },
@@ -2700,6 +2704,10 @@
     "translation": "擷取堆疊時發生錯誤: {{.Error}}"
   },
   {
+    "id": "Error running task: {{.CloudControllerMessage}}",
+    "translation": ""
+  },
+  {
     "id": "Error saving manifest: {{.Error}}",
     "translation": "儲存資訊清單時發生錯誤: {{.Error}}"
   },
@@ -3574,6 +3582,10 @@
   {
     "id": "Invite and manage users, select and change plans, and set spending limits\n",
     "translation": "邀請和管理使用者、選取和變更方案，以及設定消費限制\n"
+  },
+  {
+    "id": "Isolation segment '{{.Name}}' not found.",
+    "translation": ""
   },
   {
     "id": "Isolation segment {{.IsolationSegmentName}} already exists.",
@@ -5276,6 +5288,14 @@
     "translation": ""
   },
   {
+    "id": "Task must have a droplet. Specify droplet or assign current droplet to app.",
+    "translation": ""
+  },
+  {
+    "id": "Task workers are unavailable.",
+    "translation": ""
+  },
+  {
     "id": "Terminate a running task of an app",
     "translation": ""
   },
@@ -6897,6 +6917,10 @@
   },
   {
     "id": "{{.MemorySize}} x {{.NumInstances}} instances",
+    "translation": ""
+  },
+  {
+    "id": "{{.Message}}\nNote that this command requires CF API version 3.0.0+.",
     "translation": ""
   },
   {
