create-package command
- config is now required for the v3 actor due to polling
- due to complexity/potential changing requirements of V3 api, passing
objects during creation/update is the new prefered method.
- due to "json,omitempty" not skipping empty structs, links are now map
so marshaling resources to json will exclude them when empty.

[Finishes #141919871]

Signed-off-by: Aakash Shah <ashah@pivotal.io>

--- a/cf/i18n/resources/fr-fr.untranslated.json
+++ b/cf/i18n/resources/fr-fr.untranslated.json
@@ -16,6 +16,10 @@
     "translation": ""
   },
   {
+    "id": "**EXPERIMENTAL** Uploads a V3 Package",
+    "translation": ""
+  },
+  {
     "id": "API URL to target",
     "translation": "API URL to target"
   },
@@ -709,6 +713,10 @@
   },
   {
     "id": "CF_NAME v3-create-app --name [name]",
+    "translation": ""
+  },
+  {
+    "id": "CF_NAME v3-create-package --name [name]",
     "translation": ""
   },
   {
@@ -1546,6 +1554,10 @@
   {
     "id": "Updating isolation segment of space {{.SpaceName}} in org {{.OrgName}} as {{.CurrentUser}}...",
     "translation": "Updating isolation segment of space {{.SpaceName}} in org {{.OrgName}} as {{.CurrentUser}}..."
+  },
+  {
+    "id": "Uploading V3 app {{.AppName}} in org {{.CurrentOrg}} / space {{.CurrentSpace}} as {{.CurrentUser}}...",
+    "translation": ""
   },
   {
     "id": "Usage:",
