--- a/cf/i18n/resources/zh-hant.all.json
+++ b/cf/i18n/resources/zh-hant.all.json
@@ -176,6 +176,10 @@
     "translation": ""
   },
   {
+    "id": "**EXPERIMENTAL** Uploads a V3 Package",
+    "translation": ""
+  },
+  {
     "id": "A command line tool to interact with Cloud Foundry",
     "translation": "要與 Cloud Foundry 互動的指令行工具"
   },
@@ -1629,6 +1633,10 @@
   },
   {
     "id": "CF_NAME v3-create-app --name [name]",
+    "translation": ""
+  },
+  {
+    "id": "CF_NAME v3-create-package --name [name]",
     "translation": ""
   },
   {
@@ -5962,6 +5970,10 @@
   {
     "id": "Updating {{.AppName}} health_check_type to '{{.HealthCheckType}}'",
     "translation": "正在將 {{.AppName}} health_check_type 更新為 '{{.HealthCheckType}}'"
+  },
+  {
+    "id": "Uploading V3 app {{.AppName}} in org {{.CurrentOrg}} / space {{.CurrentSpace}} as {{.CurrentUser}}...",
+    "translation": ""
   },
   {
     "id": "Uploading app files from: {{.Path}}",
